# hlsdk-portable

./: .gitignore  .gitigonre  .gitmodules  .travis.yml  CMakeLists.txt  Package.swift  README.ggm.md  README.md  Readme.txt  appveyor.yml  backup.bat  backup.lst  debug.bat  how_to_play.txt  make_sdk.bat  mod_options.txt  release.bat  wscript  xash.dsw  xash.sln  xash_sdk.dsw  xash_sdk.lst
cl_dll/: Android.mk  CMakeLists.txt  Exports.h  GameStudioModelRenderer.cpp  GameStudioModelRenderer.h  GameStudioModelRenderer_Sample.cpp  GameStudioModelRenderer_Sample.h  IGameClientExports.h  MOTD.cpp  Makefile  StudioModelRenderer.cpp  StudioModelRenderer.h  aliencrosshair.cpp  ammo.cpp  ammo.h  ammo_secondary.cpp  ammohistory.cpp  ammohistory.h  battery.cpp  camera.h  cdll_int.cpp  cl_dll.dsp  cl_dll.h  cl_dll.vcxproj  cl_dll.vcxproj.filters  cl_util.h  clientbriquet.cpp  clientfog.cpp  clientlflammes.cpp  clientmusic.cpp  clientmusic.h  com_weapons.cpp  com_weapons.h  compile.bat  crutches.h  death.cpp  demo.cpp  demo.h  entity.cpp  ev_common.cpp  (+103 more)
cl_dll/3wave/: CTF_FlagStatus.cpp  CTF_HudMessage.cpp
cl_dll/Hunger/: zoom.cpp
cl_dll/TheGate/: scope.cpp
cl_dll/aghl/: AgUDPClient.h  AgVGUIPassword.cpp  AgVGUIPassword.h  AgVGuiMapBrowser.cpp  AgVGuiMapBrowser.h  Agglobal.cpp  agbase64.cpp  agbase64.h  agcrc32.cpp  agcrc32.h  agcrc32enforcer.cpp  agcrc32enforcer.h  agdownload.cpp  agdownload.h  agglobal.h  aghudcountdown.cpp  aghudcountdown.h  aghudctf.cpp  aghudctf.h  aghudcustomtimer.cpp  aghudcustomtimer.h  aghudglobal.cpp  aghudglobal.h  aghudirc.cpp  aghudirc.h  aghudlocation.cpp  aghudlocation.h  aghudlongjump.cpp  aghudlongjump.h  aghudnextmap.cpp  aghudnextmap.h  aghudplayerid.cpp  aghudplayerid.h  aghudscoreboard.cpp  aghudscoreboard.h  aghudsettings.cpp  aghudsettings.h  aghudsplash.cpp  aghudsplash.h  aghudsuddendeath.cpp  (+41 more)
cl_dll/aomdc/: blackbar.cpp  neffect.cpp
cl_dll/blackops/: nightvision.cpp  nvg.cpp
cl_dll/cthulhu/: ImageLabel.h  readbook.cpp  sanity.cpp
cl_dll/dmc/: DMC_Teleporters.cpp
cl_dll/gearbox/: hud_nightvision.cpp
cl_dll/hl/: hl_baseentity.cpp  hl_events.cpp  hl_objects.cpp  hl_weapons.cpp
cl_dll/hs/: cawadooty.cpp  fmod.h  halloween.cpp  halloween.h  mp3.cpp  mp3.h  testext.cpp  timer.cpp
cl_dll/insecure/: c4.cpp  keycard.cpp  redcard.cpp
cl_dll/noffice/: cinematic.cpp  deathvision.cpp  glow.cpp  pain.cpp
cl_dll/poke646/: scope.cpp
cl_dll/quake/: quake_baseentity.cpp  quake_events.cpp  quake_objects.cpp  quake_weapons.cpp
cl_dll/tfc/: ev_tfc.cpp  ev_tfc.h  tf_baseentity.cpp  tf_defs.h  tf_events.cpp  tf_weapons.cpp  tfc_events.cpp  touch.cpp  touch.h
cl_dll/vgui2/: CClientVGUI.cpp  CClientVGUI.h  vgui2_utils.cpp  vgui2_utils.h
cl_dll/zx/: bumpmap.cpp  bumpmap.h  mp3.cpp  mp3.h  nvg.cpp
dlls/: AI_BaseNPC_Schedule.cpp  Android.mk  Android.mk~  CMakeLists.txt  Makefile  Makefile.mingw  Wxdebug.cpp  ach_counters.h  actanimating.cpp  actanimating.h  activity.h  activitymap.h  aflock.cpp  agrunt.cpp  agrunt.h  airtank.cpp  alias.cpp  alienflyer.cpp  alienflyer_working.cpp  ammobox.cpp  animating.cpp  animation.cpp  animation.h  apache.cpp  apache.h  ar2.cpp  barnacle.cpp  barney(1).cpp~  barney.cpp  barney.h  basemonster.h  big_cock  big_cock.cpp  bigmomma.cpp  bigsmoke.cpp  bigsmoke.cpp~  bloater.cpp  bmodels.cpp  bonewheel.cpp  bot.cpp  (+256 more)
dlls/3wave/: flags.cpp  flags.h  grapple.cpp  grapple.h  runes.cpp  runes.h  threewave_gamerules.cpp  threewave_gamerules.h
dlls/CAd/: displacer.cpp  eagle.cpp  gonome.cpp  helmet.cpp  massn.cpp  otis.cpp
dlls/Hunger/: ap9.cpp  boss.cpp  chicken.cpp  flame.cpp  flame.h  hand.cpp  hkg36.cpp  medkit.cpp  shovel.cpp  sniper.cpp  spanner.cpp  tnt.cpp  weapon_einar1.cpp
dlls/TheGate/: command.cpp  scientist2.cpp
dlls/aghl/: agadmin.cpp  agadmin.h  agadmincache.cpp  agadmincache.h  agarena.cpp  agarena.h  agclient.cpp  agclient.h  agcommand.cpp  agcommand.h  agctf.cpp  agctf.h  agdom.cpp  agdom.h  aggame.cpp  aggame.h  aggamemode.cpp  aggamemode.h  aggamerules.cpp  aggamerules.h  agglobal.cpp  agglobal.h  aginfointermission.cpp  aginfointermission.h  aglms.cpp  aglms.h  aglocation.cpp  aglocation.h  aglocationcache.cpp  aglocationcache.h  agmatch.cpp  agmatch.h  agmsgstat.cpp  agmsgstat.h  agscore.cpp  agscore.h  agscorecache.cpp  agscorecache.h  agscorelog.cpp  agscorelog.h  (+16 more)
dlls/aomdc/: axe.cpp  baddavid.cpp  beretta.cpp  deagle.cpp  ghost.cpp  glock.cpp  gmgeneral.cpp  hammer.cpp  knife.cpp  mp5k.cpp  p228.cpp  revolver.cpp  spear.cpp  uzi.cpp  wheelchair.cpp  zombie.h  zombie2.cpp  zombie3.cpp  zombie4.cpp
dlls/asheep/: adrian.cpp  alienpanther.cpp  archer.cpp  barneyglock.cpp  barneyhg.cpp  barneymp5.cpp  barneyshotgun.cpp  barniel.cpp  beretta.cpp  bodypart.cpp  garbage.cpp  gordon.cpp  gordonnadrian.cpp  hevbarn.cpp  kate.cpp  kmedkit.cpp  m41a.cpp  panther.cpp  poolstick.cpp  spforce.cpp  terror.cpp  toad.cpp
dlls/blackops/: hudtoggle.cpp
dlls/bot/: bot.cpp  bot.h  bot_combat.cpp  bot_common.h  botcam.cpp  botsengcallback.h  botsengcallback.h]  crtwrap.h  cs_bot.cpp  cs_bot.h  cs_bot_chatter.cpp  cs_bot_chatter.h  cs_bot_event.cpp  cs_bot_init.cpp  cs_bot_learn.cpp  cs_bot_listen.cpp  cs_bot_manager.cpp  cs_bot_manager.h  cs_bot_nav.cpp  cs_bot_pathfind.cpp  cs_bot_radio.cpp  cs_bot_statemachine.cpp  cs_bot_update.cpp  cs_bot_vision.cpp  cs_bot_weapon.cpp  cs_gamestate.cpp  cs_gamestate.h  hl_bot.cpp  hl_bot.h  hl_bot_chatter.cpp  hl_bot_chatter.h  hl_bot_event.cpp  hl_bot_init.cpp  hl_bot_learn.cpp  hl_bot_listen.cpp  hl_bot_manager.cpp  hl_bot_manager.h  hl_bot_pathfind.cpp  hl_bot_radio.cpp  hl_bot_statemachine.cpp  (+12 more)
dlls/bubblemod/: BMOD_CameraPoint.cpp  BMOD_CameraPoint.h  BMOD_boxmarker.cpp  BMOD_boxmarker.h  BMOD_constants.h  BMOD_egon.cpp  BMOD_flyingcrowbar.cpp  BMOD_flyingcrowbar.h  BMOD_gamerules.cpp  BMOD_hornetgun.cpp  BMOD_hornetgun.h  BMOD_messaging.cpp  BMOD_messaging.h  BMOD_player.cpp  BMOD_player.h  BMOD_rune.cpp  BMOD_rune.h  BMOD_snarkmine.cpp  BMOD_snarkmine.h  BMOD_squeakgrenade.cpp  BMOD_tripmines.cpp  BMOD_util.cpp  BMOD_zapgunrift.cpp  BMOD_zapgunrift.h  egon.h  (+2 more)
(+690 files in other folders)
